--- a/LilL_Monsters_Site/index.html
+++ b/LilL_Monsters_Site/index.html
@@ -48,7 +48,7 @@
             class="d-flex flex-column container justify-content-center align-items-center flex-fill text-center"
           >
             <h3 class="header-title display-2 font-weight-lighter">
-              LiL Monsters
+              LiL Monsters!
             </h3>
             <p class="header-subtitle lead font-weight-lighter">
               The LiL Monsters are a mighty crew of characters who are exuberant
@@ -66,7 +66,7 @@
     <article id="meet" class="page-section text-center py-5">
       <header class="container w-100">
         <h1 class="display-4 text-danger font-weight-lighter mb-0">
-          Meet The Monsters
+          Meet The Monsters :)
         </h1>
         <p class="lead">
           With a wide range of backgrounds, skills, and personality, the LiL
